--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
             </div>
           </div>
         </div>
-    
-
-
+    <footer>
+        <div class="copyright text-center">
+          &copy; <script>
+            document.write(new Date().getFullYear())
+  
+        </script>&nbsp;<a href="https://rismo.fr" class=""><img src="img/Sale.webp" width="50px"><span id="ris" class="text-black">rismo.fr</span></a>
+         </div>
+            
+    </footer>
     <script src="script.js"></script>
    
 </body>
